--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="bottom">
-          <a href="about/impressum.html">Legal Notice / Impressum</a> <span>&#8226;</span> <a href="mailto:info@noahschuette.de">info@noahschuette.de</a> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>
+          <a href="mailto:info@noahschuette.de">info@noahschuette.de</a> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>
         </div>
 
       </div>
