--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <a id="github" href="https://github.com/n0j0games" target="_blank"><!--<span>github</span>--><i class="fab fa-github"></i></a>
         <a href="https://n0j0games.itch.io" target="_blank"><!--<span>my games</span>--><i class="fab fa-itch-io"></i></a>
         <a href="https://dribbble.com/n0j0" target="_blank"><i class="fab fa-dribbble"></i></a>
+        <a href="https://www.artstation.com/n0j0" target="_blank"><i class="fab fa-artstation"></i></a>
       </div>
     </section><!--
     <section id="g" class="secGames">
