Updating cookiedisabler & adding stuff

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- (C) 2020 Noah Schütte -->
+<!-- (C) 2021 Noah Schütte -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -49,24 +49,7 @@
         <a href="https://dribbble.com/n0j0" target="_blank"><i class="fab fa-dribbble"></i></a>
         <a href="https://www.artstation.com/n0j0" target="_blank"><i class="fab fa-artstation"></i></a>
       </div>
-    </section><!--
-    <section id="g" class="secGames">
-      <p class="txtHeader"><span>/</span>games</p>
-      <div class="gamesBg">
-        <div class="gamesImgHolder">
-          <img class="gamesImg" src="images/n0j0games.png" alt="">
-        </div>
-        <div onclick="window.location='https://n0j0games.github.io';" class="toGamesPage" style="cursor: pointer;">
-          <p class="gamesTitle">n0j0games.github.io</p>
-        </div>
-      </div>
-    </section>-->
-    <!--
-    <section class="secGames">
-      <p class="txtHeader"><span>/</span>games</p>
-      <div onclick="window.location='https://github.com/n0j0games/performancemonitor';" class="gameBar" style="cursor: pointer;" >
-      </div>
-    </section>-->
+    </section>
 
     <section id="wazzzzzup" class="secAbout">
 
@@ -102,13 +85,6 @@
 
       <div class="subsecAbout">
         <p class="txtHeader">about me</p>
-        <!--<div class="aboutTitle">
-          <img src="images/logo.png" class="aboutImg">
-          <p class="aboutName">Noah Schütte</p>
-        </div>
-        <p class="aboutText">I am a hobby programmer from Bielefeld, Germany.</br>I like to develop short Indie Games with the Unity Engine</br>and some other stuff.</br>I'm currently studying computer science.</p>
-        <div class="footer">
-        </div>-->
         <div class="aboutSections">
           <div class="aboutLeft">
             <h3>I am</h3>
@@ -136,8 +112,6 @@
       </div>
 
     </section>
-
-
 
     <!-- scroll -->
 
@@ -167,3 +141,22 @@
 
   </body>
 </html>
+
+<!--
+<section id="g" class="secGames">
+  <p class="txtHeader"><span>/</span>games</p>
+  <div class="gamesBg">
+    <div class="gamesImgHolder">
+      <img class="gamesImg" src="images/n0j0games.png" alt="">
+    </div>
+    <div onclick="window.location='https://n0j0games.github.io';" class="toGamesPage" style="cursor: pointer;">
+      <p class="gamesTitle">n0j0games.github.io</p>
+    </div>
+  </div>
+</section>-->
+<!--
+<section class="secGames">
+  <p class="txtHeader"><span>/</span>games</p>
+  <div onclick="window.location='https://github.com/n0j0games/performancemonitor';" class="gameBar" style="cursor: pointer;" >
+  </div>
+</section>-->
