--- a/403.html
+++ b/403.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>noahschuette - Error 403</title>
-  <link rel="stylesheet" href="error.css">
+  <link rel="stylesheet" href="/error.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
         <p class="dash">&mdash;</p>
         <a class="status" href="https://www.githubstatus.com/">GitHub Pages Status</a>
       </div>
-      <img src="images/logo.png" alt="">
+      <img src="/images/logo.png" alt="">
     </section>
   </body>
 </html>
