Updating Editor & adding palettebin

--- a/editor/index.html
+++ b/editor/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=DotGothic16&family=Indie+Flower&family=Newsreader&family=Roboto&family=Roboto+Mono&family=Seaweed+Script&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
   <script src="script.js"></script>
   <!--<script src="reader.js"></script>-->
   <script src="warning.js"></script>
@@ -43,6 +44,7 @@
     <textarea id="my-textarea" spellcheck="false" placeholder="Write something..."></textarea>
   </div>
 
+<!--
   <footer>
     <div id="foot">
       <ul>
@@ -50,13 +52,15 @@
           <p>&copy; 2021 noahschuette.github.io </p>
         </li>
         <li>
-          <!--<a href="https://noahschuette.de/about/impressum.html"><p>ABOUT</p></a>-->
         </li>
       </ul>
     </div>
 
-  </footer>
-
+  </footer>-->
+  <div class="copyright" style="position: fixed; right: 30px; bottom: 30px;">
+    <a href="https://noahschuette.de" id="n0j0logo"><script onload="replaceLogo('n0j0logo','#757575')" src="https://noahschuette.github.io/scripts/essentials.js"></script></a>
+    <p style="color: #757575; font-family: 'Roboto', monospace; font-size: 15px;">&copy; 2021</p>
+  </div>
 
   <!-- <p id="info">free text-file editor v0.2</p>-->
 
