--- a/ss2021/index.html
+++ b/ss2021/index.html
@@ -18,6 +18,11 @@
     </div>
 
     <div class="rubrik">
+      <a class="general" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/Stundenplan_Wochenplan.jsp">eKVV</a>
+      <a class="general" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google Sheets)</a>
+    </div>
+
+    <div class="rubrik">
       <p>Mathe für Naturwissenschaften II</p>
       <a class="lernraum" href="https://bis.uni-bielefeld.de/sites/34948/Start.aspx">Lernraum</a>
       <a class="plus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=9068">Lernraum+ (Übungen)</a>
@@ -30,7 +35,7 @@
       <p>Physik II</p>
       <a class="plus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=9318">Lernraum+</a>
       <a class="zoom" href="https://lernraumplus.uni-bielefeld.de/mod/url/view.php?id=373035">Vorlesung</a>
-      <a class="zoom" href="https://lernraumplus.uni-bielefeld.de/mod/forum/discuss.php?d=60260">Tutorium</a>
+      <a class="zoom" href="https://uni-bielefeld.zoom.us/j/98282322919?pwd=QUNMNFo0SURyVUNsaSt5RTZZRmdZUT09">Tutorium</a>
       <p id="note">Vorlesung: Mo 10, Mi 12  -  Tutorium: Mo 12</p>
     </div>
     <div class="rubrik">
