--- a/palettebin/index.html
+++ b/palettebin/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
     <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="ntc.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </head>
   <body onload="setPalette()">
     <!--<p class="title" onclick="reset()"><span id="x1">P</span><span id="x2">a</span><span id="x3">l</span><span id="x4">e</span><span id="x5">t</span><span id="x6">t</span><span id="x7">E</span>bin</p>-->
-    <p class="title" onclick="reset()">Palettebin</p>
+    <div class="titlediv">
+      <p class="title" onclick="reset()">Palettebin</p>
+      <a href="library.html" class="library"><i class="fas fa-stream"></i>DISCOVER PALETTES</a>
+    </div>
+
     <section class="fullscreen">
       <p class="paletteTitle" id="title"> <span class="mark">"</span>Black N' White<span class="mark">"</span></p>
       <p class="author" id="author">Example</p>
