--- a/palettebin/library.html
+++ b/palettebin/library.html
@@ -11,7 +11,9 @@
     <script type="text/javascript" src="library.js"></script>
   </head>
   <body onload="setLibrary()">
-    <a href="index.html" class="title">Palettebin <span id="libSubtitle">LIBRARY</span></a>
+    <div class="titlediv">
+      <a href="index.html" class="title">Palettebin <span id="libSubtitle">LIBRARY</span></a>
+    </div>
     <section id="library">
       <a href="#" class="libEntry">
         <p class="libTitle">Maul</p>
