--- a/ss2021/index.html
+++ b/ss2021/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SS2021 Links</title>
+    <link rel="shortcut icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap" rel="stylesheet">
