--- a/palettebin/library.html
+++ b/palettebin/library.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Palettebin</title>
+    <link rel="shortcut icon" href="icon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
