adding palettebin to mainpage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   <body onload="loadCookie()">
     <section id="header" class="secHead">
       <div class="divLogo">
-        <!--<img id="logo" src="images/logo.png" alt="">-->
         <div class="divTitle">
           <p class="txtTitle">Noah Schütte</p>
           <p class="txtSubtitle">programmer & game developer</p>
@@ -58,25 +57,29 @@
         <div class="secProjects">
           <div onclick="window.location='https://n0j0games.github.io/smashteroid';" id="proj3" class="divProject" style="cursor: pointer;" >
             <div id="pfooter3" class="divFooter">
-              <a href="https://n0j0games.github.io/smashteroid"><i class="fas fa-gamepad"></i> Smashteroid</a>
-              <!--<p id="sub1" class="pSubinfos">Unity C# <span>&#8226;</span> Browser-Game <span>&#8226;</span> Android (.apk)</p>-->
+              <a href="https://n0j0games.github.io/smashteroid">Smashteroid</a>
               <p id="sub1" class="pDescription">yeet!</p>
             </div>
           </div>
           <div onclick="window.location='https://n0j0games.github.io/';" id="proj2" class="divProject" style="cursor: pointer;" >
             <div id="pfooter2" class="divFooter">
-              <a href="https://n0j0games.github.io/"><i class="fas fa-gamepad"></i> Games & Prototypes</a>
-              <!--<p id="sub1" class="pSubinfos">HTML CSS JS <span>&#8226;</span> Website</p>-->
+              <a href="https://n0j0games.github.io/">Games & Prototypes</a>
               <p id="sub1" class="pDescription">Games & Prototypes</p>
             </div>
           </div>
-          <div onclick="window.location='https://github.com/n0j0games/performancemonitor';" id="proj1" class="divProject" style="cursor: pointer;" >
+          <div onclick="window.location='https://palettebin.noahschuette.de';" id="proj4" class="divProject" style="cursor: pointer;" >
             <div id="pfooter1" class="divFooter">
-              <a href="https://github.com/n0j0games/performancemonitor"><i class="fab fa-windows"></i> Performance Monitor</a>
-              <!--<p id="sub1" class="pSubinfos">C# <span>&#8226;</span> Windows (.exe)</p>-->
-              <p id="sub1" class="pDescription">Track your CPU and RAM performance in a small Desktop widget</p>
+              <a href="https://palettebin.noahschuette.de">Palettebin</a>
+              <p id="sub1" class="pDescription">undefined</p>
             </div>
           </div>
+          <!--
+          <div onclick="window.location='https://github.com/n0j0games/performancemonitor';" id="proj1" class="divProject" style="cursor: pointer;" >
+            <div id="pfooter1" class="divFooter">
+              <a href="https://github.com/n0j0games/performancemonitor">Performance Monitor</a>
+              <p id="sub1" class="pDescription">Track your CPU and RAM performance in a small Desktop widget</p>
+            </div>
+          </div>-->
         </div>
       </div>
 
