changing mobile css

--- a/test.html
+++ b/test.html
@@ -37,8 +37,8 @@
     <section id="header" class="secHead">
       <div class="divLogo">
         <div class="divTitle">
-          <p class="txtTitle">Noah Schütte</p>
-          <p class="txtSubtitle">just some test. work in progress</p>
+          <p class="txtTitle">mobile suxx</p>
+          <p class="txtSubtitle">if that text above is red, you're on a mobile device</p>
         </div>
       </div>
       <div class="divSocials">
