--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <section class="section">
+      <img class="titleimg" src="/images/r2d2.gif" alt="">
       <p class="title">404</p>
       <p class="subtitle">NOT FOUND</p>
       <p class="funnyInfo">"These aren't the droids you are looking for"</p>
