--- a/palettebin/index.html
+++ b/palettebin/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Palettebin</title>
     <link rel="shortcut icon" href="icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
