showing off minitxt in editor

--- a/editor/index.html
+++ b/editor/index.html
@@ -64,5 +64,10 @@
 
   <!-- <p id="info">free text-file editor v0.2</p>-->
 
+  <div id="newTooltip" class="newTooltip">
+    <a href="https://noahschuette.de/minitxt">TRY OUT MY NEW EDITOR</a>
+    <button onclick="hide()" type="button" name="button">X</button>
+  </div>
+
 </body>
 </html>
