Adding colorscheme test

--- a/palettebin/index.html
+++ b/palettebin/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
     <script src="ntc.js"></script>
+    <script src="colorscheme.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </head>
   <body onload="setPalette()">
@@ -19,6 +20,7 @@
     <div class="titlediv">
       <p class="title" onclick="reset()">Palettebin</p>
       <a href="library.html" class="library"><i class="fas fa-stream"></i>DISCOVER PALETTES</a>
+      <!--<a href="#" onclick="getScheme()" class="library"><i class="fas fa-stream"></i>SCHEME</a>-->
     </div>
 
     <section class="fullscreen">
