Adding palettebin icon

--- a/palettebin/index.html
+++ b/palettebin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Palettebin</title>
-    <link rel="shortcut icon" href="icon.png">
+    <link rel="shortcut icon" href="iconNewRound.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
@@ -18,9 +18,10 @@
   <body onload="setPalette()">
     <!--<p class="title" onclick="reset()"><span id="x1">P</span><span id="x2">a</span><span id="x3">l</span><span id="x4">e</span><span id="x5">t</span><span id="x6">t</span><span id="x7">E</span>bin</p>-->
     <div class="titlediv">
-      <p class="title" onclick="reset()">Palettebin</p>
+      <p class="title" onclick="reset()"><img class="titleIcon" src="iconNewRound.png" alt="">Palettebin</p>
       <a href="library.html" class="library"><i class="fas fa-stream"></i>DISCOVER PALETTES</a>
-      <!--<a href="#" onclick="getScheme()" class="library"><i class="fas fa-stream"></i>SCHEME</a>-->
+      <a href="#" class="library generator"><i class="fas fa-cog"></i>PALETTE GENERATOR (SOON)</a>
+      <!--onclick="getScheme()"-->
     </div>
 
     <section class="fullscreen">
