--- a/palettebin/index.html
+++ b/palettebin/index.html
@@ -14,6 +14,16 @@
     <script src="ntc.js"></script>
     <script src="colorscheme.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <script>
+      (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2536315,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
   </head>
   <body onload="setPalette()">
     <!--<p class="title" onclick="reset()"><span id="x1">P</span><span id="x2">a</span><span id="x3">l</span><span id="x4">e</span><span id="x5">t</span><span id="x6">t</span><span id="x7">E</span>bin</p>-->
