changing background on main page

--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
 
   </head>
   <body onload="loadCookie()">
+
+    <div id="blendIn"></div>
+
     <section id="header" class="secHead">
       <div class="divLogo">
         <div class="divTitle">
           <p class="txtTitle">Noah Schütte</p>
-          <p class="txtSubtitle">programmer & game developer</p>
+          <p class="txtSubtitle">programmer & game dev</p>
         </div>
       </div>
       <div class="divSocials">
