--- a/palettebin/library.html
+++ b/palettebin/library.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Palettebin</title>
-    <link rel="shortcut icon" href="icon.png">
+    <link rel="shortcut icon" href="iconNewRound.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
@@ -13,7 +13,7 @@
   </head>
   <body onload="setLibrary()">
     <div class="titlediv">
-      <a href="index.html" class="title">Palettebin <span id="libSubtitle">LIBRARY</span></a>
+      <a href="index.html" class="title"><img class="titleIcon" src="iconNewRound.png" alt="">Palettebin <span id="libSubtitle">LIBRARY</span></a>
     </div>
     <section id="library">
       <a href="#" class="libEntry">
