--- a/palettebin/library.html
+++ b/palettebin/library.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Palettebin</title>
     <link rel="shortcut icon" href="iconNewRound.png">
+    <meta name="description" content="View and create color palettes that can be viewed through a simple link. Palettes can be created by hand or via a custom generator. There is also a library with a lot of good palettes you can use.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://noahschuette.github.io/scripts/essentials.css">
