removing stuff, adding font

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="script.js"></script>
     <script src="cookiedisabler.js"></script>
     <!-- Hotjar Tracking Code for noahschuette.de -->
-    <script>
+    <!--<script>
       (function(h,o,t,j,a,r){
           h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
           h._hjSettings={hjid:2387120,hjsv:6};
@@ -28,13 +28,13 @@
           r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
           a.appendChild(r);
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
+    </script>-->
 
 
   </head>
   <body onload="loadCookie()">
 
-    <div id="blendIn"></div>
+    <!--<div id="blendIn"></div>-->
 
     <section id="header" class="secHead">
       <div class="divLogo">
