--- a/index.html
+++ b/index.html
@@ -47,19 +47,22 @@
           <div onclick="window.location='https://n0j0games.github.io/smashteroid';" id="proj3" class="divProject" style="cursor: pointer;" >
             <div id="pfooter3" class="divFooter">
               <a href="https://n0j0games.github.io/smashteroid">Smashteroid</a>
-              <p id="sub1" class="pDescription">yeet!</p>
             </div>
           </div>
-          <div onclick="window.location='https://n0j0games.github.io/';" id="proj2" class="divProject" style="cursor: pointer;" >
+          <!--<div onclick="window.location='https://n0j0games.github.io/';" id="proj2" class="divProject" style="cursor: pointer;" >
             <div id="pfooter2" class="divFooter">
               <a href="https://n0j0games.github.io/">Games & Prototypes</a>
               <p id="sub1" class="pDescription">Games & Prototypes</p>
             </div>
-          </div>
+          </div>-->
           <div onclick="window.location='https://palettebin.noahschuette.de';" id="proj4" class="divProject" style="cursor: pointer;" >
             <div id="pfooter1" class="divFooter">
               <a href="https://palettebin.noahschuette.de">Palettebin</a>
-              <p id="sub1" class="pDescription">undefined</p>
+            </div>
+          </div>
+          <div onclick="window.location='https://noahschuette.github.io/minitxt/';" id="proj5" class="divProject" style="cursor: pointer;" >
+            <div id="pfooter5" class="divFooter">
+              <a href="https://palettebin.noahschuette.de">minitxt</a>
             </div>
           </div>
           <!--
@@ -80,7 +83,7 @@
         <div class="aboutSections">
           <div class="aboutLeft">
             <h3>I am</h3>
-            <h4>Noah, 20 years old</h4>
+            <h4>Noah, 21 years old</h4>
             <h3>I live in</h3>
             <h4>Bielefeld, Germany</h4>
             <h3>I study</h3>
