adding preset adding responsive mobile design

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="I am Noah, a hobby programmer from Germany. I like to develope Indie Games in Unity and other stuff."/>
     <meta name="keywords" content="Noah Schütte, Noah Schütte Bielefeld, n0j0games, noahschuette, n0j0">
     <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="mobile.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Font "Chakra Petch" Import -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -101,7 +102,7 @@
         </div>
 
         <div class="bottom">
-          <a href="mailto:info@noahschuette.de">info@noahschuette.de</a> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>
+          <p>info<i class="fas fa-at"></i>noahschuette.de</p> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>
         </div>
 
       </div>
