--- a/ss2021/index.html
+++ b/ss2021/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@500&display=swap" rel="stylesheet">
+    <meta http-equiv="refresh" content="0; url=https://noahschuette.de/ws2122" />
   </head>
   <body>
     <div class="legende">
