--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -8,9 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body onload="read_request(false)">
   <!--"Stundenplan"-->
   <div class="table">
     <div class="leftRow">
@@ -26,7 +27,7 @@
       <div class="item"><p class="placeholderTxt">Ü DB</p></div>
       <div class="item"><p class="placeholderTxt">Ü SE</p></div>
       <div class="item"><p class="placeholderTxt">Ü ML / SE Pr</p></div>
-      <div class="item"><p class="placeholderTxt">Ü KK / Ü ML* / Ü SE</p></div>
+      <div class="item"><p class="placeholderTxt">Ü KOG / Ü ML* / Ü SE</p></div>
       <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="#"><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
@@ -43,7 +44,7 @@
       <div class="item"></div>
       <div class="item"><p class="placeholderTxt">Ü SE / SE Pr*</p></div>
       <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="#"><i class="fas fa-video"></i></a></div>
-      <div class="item"><p class="placeholderTxt">Ü KK</p></div>
+      <div class="item"><p class="placeholderTxt">Ü KOG</p></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
@@ -56,42 +57,54 @@
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
-      <div class="item"><p class="placeholderTxt">Ü DB* / Ü KK / Ü SE</p></div>
+      <div class="item"><p class="placeholderTxt">Ü DB* / Ü KOG / Ü SE</p></div>
       <div class="item"></div><div class="item"></div>
     </div>
   </div>
-  <!---Fächer-->
-  <div class="modules">
-    <div class="moduleItem">
-      <a class="moduleLink" id="ekvv" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
-      <a class="moduleLink" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google-Sheets)</a>
+
+  <section id="rightPart">
+    <!---Fächer-->
+    <div class="modules">
+      <div class="moduleItem">
+        <a class="moduleLink" id="ekvv" href="https://ekvv.uni-bielefeld.de/kvv_publ/publ/benvw_Login_MatrikelAct">eKVV</a>
+        <a class="moduleLink" href="https://docs.google.com/spreadsheets/d/1gHT5yleFO7J8022jn4L9Je-N-mDim4P59t-0V5LPmRo/edit#gid=1893177104">Liste (Google-Sheets)</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Rechnerarchitektur</p>
+        <a class="moduleLink lr" href="">Lernraum</a>
+        <a class="moduleLink lrplus" href="">Lernraum+</a>
+        <a class="moduleLink video" href="">Panopto</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Datenbanken</p>
+        <a class="moduleLink" href="">Lernraum</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Software Engineering</p>
+        <a class="moduleLink" href="">Lernraum</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Mathe Vertiefung</p>
+        <a class="moduleLink" href="">Lernraum</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Künstliche Kognition</p>
+        <a class="moduleLink" href="">Lernraum</a>
+      </div>
+      <div class="moduleItem">
+        <p class="moduleTitle">Maschinelles Lernen</p>
+        <a class="moduleLink" href="">Lernraum</a>
+      </div>
     </div>
-    <div class="moduleItem">
-      <p class="moduleTitle">Rechnerarchitektur</p>
-      <a class="moduleLink lr" href="">Lernraum</a>
-      <a class="moduleLink lrplus" href="">Lernraum+</a>
-      <a class="moduleLink video" href="">Panopto</a>
+    <!--Punkte-->
+    <div class="points" id="points">
+      <button onclick="read_request(true)"><i class="fas fa-sync-alt"></i></button>
+      <!--<div class="scala">
+        <p class="scalaTitle">template</p>
+        <p class="scalaPercentage">50%</p>
+      </div>-->
     </div>
-    <div class="moduleItem">
-      <p class="moduleTitle">Datenbanken</p>
-      <a class="moduleLink" href="">Lernraum</a>
-    </div>
-    <div class="moduleItem">
-      <p class="moduleTitle">Software Engineering</p>
-      <a class="moduleLink" href="">Lernraum</a>
-    </div>
-    <div class="moduleItem">
-      <p class="moduleTitle">Mathe Vertiefung</p>
-      <a class="moduleLink" href="">Lernraum</a>
-    </div>
-    <div class="moduleItem">
-      <p class="moduleTitle">Künstliche Kognition</p>
-      <a class="moduleLink" href="">Lernraum</a>
-    </div>
-    <div class="moduleItem">
-      <p class="moduleTitle">Maschinelles Lernen</p>
-      <a class="moduleLink" href="">Lernraum</a>
-    </div>
-  </div>
+  </section>
+
 </body>
 </html>
